# PersonalizedCommentator

./: .env.example  .gitignore  README.md  RUNNING_THE_EXAMPLE.md  football_commentator.py  instructions.md  pyproject.toml  utils.py
